[gd_scene load_steps=13 format=2]

[ext_resource path="res://Dialog/Dialog.gd" type="Script" id=1]
[ext_resource path="res://Menu/Nothing-Regular (1).ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Menu/menu_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://Images/Characters/Ben/Normal.png" type="Texture" id=4]
[ext_resource path="res://Dialog/DialogWhite.tres" type="StyleBox" id=5]
[ext_resource path="res://Dialog/Dialogblack.tres" type="StyleBox" id=6]
[ext_resource path="res://Images/Other/DialogBox.png" type="Texture" id=7]

[sub_resource type="Animation" id=1]
resource_name = "Fade Sprite"
length = 1.5

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=4]
size = 32
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=5]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.2, 0.2 ),
"update": 0,
"values": [ Vector2( 845.567, 166.948 ), Vector2( 845.567, 169.948 ) ]
}

[node name="Dialog" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
timerPath = NodePath("Timer")
inputDelayPath = NodePath("InputDelay")
portraitPath = NodePath("Portrait")
textPath = NodePath("DialogBox/Text")
namePath = NodePath("DialogBox/Name")
Q1ButtonPath = NodePath("Q1Button")
Q2ButtonPath = NodePath("Q2Button")
indicatorPath = NodePath("DialogBox/Polygon2D")
indicatorAnimPath = NodePath("DialogBox/Polygon2D/indicatorAnim")
loadAnimPath = NodePath("LoadAnim")
colorRectPath = NodePath("BackGround")

[node name="BackGround" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.768627, 0.72549, 0.239216, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Portrait" type="TextureRect" parent="."]
anchor_right = 4.76837e-07
anchor_bottom = 5.08626e-07
margin_left = 60.9955
margin_top = 31.6923
margin_right = 440.995
margin_bottom = 689.692
rect_min_size = Vector2( 380, 658 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InputDelay" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="LoadAnim" type="AnimationPlayer" parent="."]
"anims/Fade Sprite" = SubResource( 1 )

[node name="Q1Button" type="Button" parent="."]
margin_left = 530.034
margin_top = 417.45
margin_right = 780.034
margin_bottom = 467.45
rect_pivot_offset = Vector2( 153.624, 0 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 6 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "N/A"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Q2Button" type="Button" parent="."]
margin_left = 529.675
margin_top = 495.768
margin_right = 779.675
margin_bottom = 545.768
rect_pivot_offset = Vector2( 153.624, 0 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "N/A"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogBox" type="TextureRect" parent="."]
margin_left = 413.247
margin_top = 65.7239
margin_right = 938.247
margin_bottom = 390.724
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="RichTextLabel" parent="DialogBox"]
margin_left = 27.6606
margin_top = -26.6697
margin_right = 387.661
margin_bottom = 13.3303
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
meta_underlined = false
tab_size = 0
text = "NAME GOES HERE"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="RichTextLabel" parent="DialogBox"]
margin_left = 61.0
margin_top = 46.0
margin_right = 401.0
margin_bottom = 291.0
custom_fonts/normal_font = SubResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
meta_underlined = false
text = "Words go here"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Polygon2D" type="Polygon2D" parent="DialogBox"]
position = Vector2( 449.653, 267.157 )
color = Color( 0, 0, 0, 1 )
antialiased = true
polygon = PoolVector2Array( -16.0983, -0.264832, 10.9562, -0.264832, -2.42242, 16.9786 )

[node name="indicatorAnim" type="AnimationPlayer" parent="DialogBox/Polygon2D"]
anims/Bounce = SubResource( 5 )

[connection signal="pressed" from="Q1Button" to="." method="_on_Q1Button_pressed"]
[connection signal="pressed" from="Q2Button" to="." method="_on_Q2Button_pressed"]
